# aitrace

./: .gitignore  Cargo.toml  README.md  install.sh
.github/workflows/: release.yml
src/: analyzer.rs  cache.rs  cli.rs  doctor.rs  main.rs  output.rs  toc.rs  xctrace.rs
