[package]
name = "aitrace"
version = "0.1.0"
edition = "2021"
authors = ["Yuze Pan"]
description = "AI-friendly CLI analyzer for Apple Instruments .trace bundles"
license = "MIT"
repository = "https://github.com/yuzeguitarist/aitrace"

[dependencies]
anyhow = "1"
blake3 = "1"
clap = { version = "4", features = ["derive"] }
quick-xml = "0.38"
regex = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tempfile = "3"
zstd = "0.13"

[profile.release]
codegen-units = 1
lto = "thin"
strip = true
